==> youranwang-hub/Harmony/zhangjiayuan/（ARM外围传感器实验）实验8_LCD液晶屏实验/【外围实验8-1拓】LCD实验/代码/BSP/lcd_ili9341.c <==
#include <stddef.h>
#include "lcd_ili9341.h"
#include "lcd_fonts.h"
#include "delay.h"     //简单延时
#define FSMC_Addr_ILI9341_CMD   ((uint32_t)0x60000000)
#define FSMC_Addr_ILI9341_DATA  ((uint32_t)0x60020000)
#define ILI9341_RST_PORT        GPIOE
#define ILI9341_RST_PIN         GPIO_Pin_1
#define ILI9341_BK_PORT         GPIOD
#define ILI9341_BK_PIN          GPIO_Pin_12
#define ILI9341_LESS_PIXEL      240    //液晶屏较短方向的像素宽度
#define ILI9341_MORE_PIXEL      320    //液晶屏较长方向的像素宽度
#define CMD_RESET                   0x0001
#define CMD_SLEEP_OUT               0x0011
#define CMD_GAMMA                   0x0026
#define CMD_DISPLAY_OFF             0x0028
#define CMD_DISPLAY_ON              0x0029
#define CMD_COLUMN_ADDR             0x002A
#define CMD_PAGE_ADDR               0x002B
#define CMD_GRAM                    0x002C
#define CMD_TEARING_OFF             0x0034
#define CMD_TEARING_ON              0x0035
#define CMD_DISPLAY_INVERSION       0x00B4
#define CMD_MAC                     0x0036
#define CMD_PIXEL_FORMAT            0x003A
#define CMD_WDB                     0x0051
#define CMD_WCD                     0x0053
#define CMD_RGB_INTERFACE           0x00B0
#define CMD_FRC                     0x00B1
#define CMD_BPC                     0x00B5
#define CMD_DFC                     0x00B6
#define CMD_ETMOD                   0x00B7
#define CMD_POWER1                  0x00C0
#define CMD_POWER2                  0x00C1
#define CMD_VCOM1                   0x00C5

static void ILI9341_GPIO_Config(void)
{
    GPIO_InitTypeDef GPIO_InitStructure;

    RCC_AHB1PeriphClockCmd(
        RCC_AHB1Periph_GPIOD |
        RCC_AHB1Periph_GPIOE,
        ENABLE
    );

    // SRAM Data lines, NOE and NWE configuration
    GPIO_InitStructure.GPIO_Pin =
        GPIO_Pin_0 |
        GPIO_Pin_1 |
        GPIO_Pin_4 |
        GPIO_Pin_5 |
        GPIO_Pin_7 |
        GPIO_Pin_8 |
        GPIO_Pin_9 |
        GPIO_Pin_10 |
        GPIO_Pin_11 |
        GPIO_Pin_14 |
        GPIO_Pin_15;

    GPIO_InitStructure.GPIO_Mode  = GPIO_Mode_AF;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
    GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_NOPULL;

    GPIO_Init(GPIOD, &GPIO_InitStructure);

    // GPIOE
    GPIO_InitStructure.GPIO_Pin =
        GPIO_Pin_7 |
        GPIO_Pin_8 |
        GPIO_Pin_9 |
        GPIO_Pin_10 |
        GPIO_Pin_11 |
        GPIO_Pin_12 |
        GPIO_Pin_13 |
        GPIO_Pin_14 |
        GPIO_Pin_15;

    GPIO_Init(GPIOE, &GPIO_InitStructure);

    GPIO_PinAFConfig(GPIOD, GPIO_PinSource0,  GPIO_AF_FSMC);
    GPIO_PinAFConfig(GPIOD, GPIO_PinSource1,  GPIO_AF_FSMC);
    GPIO_PinAFConfig(GPIOD, GPIO_PinSource4,  GPIO_AF_FSMC);
    GPIO_PinAFConfig(GPIOD, GPIO_PinSource5,  GPIO_AF_FSMC);
    GPIO_PinAFConfig(GPIOD, GPIO_PinSource7,  GPIO_AF_FSMC);
    GPIO_PinAFConfig(GPIOD, GPIO_PinSource8,  GPIO_AF_FSMC);
    GPIO_PinAFConfig(GPIOD, GPIO_PinSource9,  GPIO_AF_FSMC);
    GPIO_PinAFConfig(GPIOD, GPIO_PinSource10, GPIO_AF_FSMC);
    GPIO_PinAFConfig(GPIOD, GPIO_PinSource11, GPIO_AF_FSMC);
    GPIO_PinAFConfig(GPIOD, GPIO_PinSource14, GPIO_AF_FSMC);
    GPIO_PinAFConfig(GPIOD, GPIO_PinSource15, GPIO_AF_FSMC);

    GPIO_PinAFConfig(GPIOE, GPIO_PinSource7,  GPIO_AF_FSMC);
    GPIO_PinAFConfig(GPIOE, GPIO_PinSource8,  GPIO_AF_FSMC);
    GPIO_PinAFConfig(GPIOE, GPIO_PinSource9,  GPIO_AF_FSMC);
    GPIO_PinAFConfig(GPIOE, GPIO_PinSource10, GPIO_AF_FSMC);
    GPIO_PinAFConfig(GPIOE, GPIO_PinSource11, GPIO_AF_FSMC);
    GPIO_PinAFConfig(GPIOE, GPIO_PinSource12, GPIO_AF_FSMC);
    GPIO_PinAFConfig(GPIOE, GPIO_PinSource13, GPIO_AF_FSMC);
    GPIO_PinAFConfig(GPIOE, GPIO_PinSource14, GPIO_AF_FSMC);
    GPIO_PinAFConfig(GPIOE, GPIO_PinSource15, GPIO_AF_FSMC);

    //LED_BL
    GPIO_InitStructure.GPIO_Pin   = GPIO_Pin_12;
    GPIO_InitStructure.GPIO_Mode  = GPIO_Mode_OUT;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_2MHz;
    GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
    GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_NOPULL;

    GPIO_Init(GPIOD, &GPIO_InitStructure);

    //RESET
    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_1;
    GPIO_Init(GPIOE, &GPIO_InitStructure);
}

static void ILI9341_BackLight(uint8_t uOnOff)
{
    if (uOnOff)
    {
        GPIO_ResetBits(ILI9341_BK_PORT,
                       ILI9341_BK_PIN);
    }
    else
    {
        GPIO_SetBits(ILI9341_BK_PORT,
                     ILI9341_BK_PIN);
    }
}

static void ILI9341_Rst(void)
{
    GPIO_ResetBits(ILI9341_RST_PORT,
                   ILI9341_RST_PIN);

    ILI9341_DELAY_MS(5);

    GPIO_SetBits(ILI9341_RST_PORT,
                 ILI9341_RST_PIN);

    ILI9341_DELAY_MS(5);
}
